# UnifyCR

./: Makefile.am  busybox-bootstrap.sh  busybox-howto.txt  celso.c  cleanup.sh  configure.ac  start-busybox  start-corrupt  start-server  stop-server
busybox-files/: .config
busybox-files/libbb/: appletlib.c
client/src/: Makefile.am  gotcha_map_unifyfs_list.c  margo_client.c  unifycr-internal.h  unifycr-sysio.c  unifycr.c  unifycr_client.c  unifycr_clientcalls_rpc.h  unifyfs-fixed.c  unifyfs-fixed.h  unifyfs-internal.h  unifyfs-sysio.c  unifyfs-sysio.h  unifyfs.c
client/tests/: Makefile.am  test_listread.c  test_read.c  test_write.c
common/src/: Makefile.am  rb.c  rb.h  seg_tree.c  seg_tree.h
examples/src/: Makefile.am  corrupt.c  multi-write.c
scripts/linux_kernel_checkpatch/: checkpatch.pl
server/src/: unifycr_cmd_handler.c  unifycr_global.h  unifycr_init.c  unifycr_metadata.c  unifycr_metadata.h  unifycr_request_manager.c  unifycr_service_manager.c  unifycr_sock.c  unifycr_sock.h  unifyfs_request_manager.c
t/: Makefile.am
t/sys/: sysio_suite.c  sysio_suite.h
